; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/cx23885/extr_cx23885-417.c_vidioc_s_ext_ctrls.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/cx23885/extr_cx23885-417.c_vidioc_s_ext_ctrls.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.v4l2_ext_controls = type { i64 }
%struct.cx23885_fh = type { %struct.cx23885_dev* }
%struct.cx23885_dev = type { %struct.cx2341x_mpeg_params }
%struct.cx2341x_mpeg_params = type { i32 }

@V4L2_CTRL_CLASS_MPEG = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i32 0, align 4
@VIDIOC_S_EXT_CTRLS = common dso_local global i32 0, align 4
@cx23885_mbox_func = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i8*, %struct.v4l2_ext_controls*)* @vidioc_s_ext_ctrls to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vidioc_s_ext_ctrls(%struct.file* %0, i8* %1, %struct.v4l2_ext_controls* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.file*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.v4l2_ext_controls*, align 8
  %8 = alloca %struct.cx23885_fh*, align 8
  %9 = alloca %struct.cx23885_dev*, align 8
  %10 = alloca %struct.cx2341x_mpeg_params, align 4
  %11 = alloca i32, align 4
  store %struct.file* %0, %struct.file** %5, align 8
  store i8* %1, i8** %6, align 8
  store %struct.v4l2_ext_controls* %2, %struct.v4l2_ext_controls** %7, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = bitcast i8* %12 to %struct.cx23885_fh*
  store %struct.cx23885_fh* %13, %struct.cx23885_fh** %8, align 8
  %14 = load %struct.cx23885_fh*, %struct.cx23885_fh** %8, align 8
  %15 = getelementptr inbounds %struct.cx23885_fh, %struct.cx23885_fh* %14, i32 0, i32 0
  %16 = load %struct.cx23885_dev*, %struct.cx23885_dev** %15, align 8
  store %struct.cx23885_dev* %16, %struct.cx23885_dev** %9, align 8
  %17 = load %struct.v4l2_ext_controls*, %struct.v4l2_ext_controls** %7, align 8
  %18 = getelementptr inbounds %struct.v4l2_ext_controls, %struct.v4l2_ext_controls* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = load i64, i64* @V4L2_CTRL_CLASS_MPEG, align 8
  %21 = icmp ne i64 %19, %20
  br i1 %21, label %22, label %25

22:                                               ; preds = %3
  %23 = load i32, i32* @EINVAL, align 4
  %24 = sub nsw i32 0, %23
  store i32 %24, i32* %4, align 4
  br label %47

25:                                               ; preds = %3
  %26 = load %struct.cx23885_dev*, %struct.cx23885_dev** %9, align 8
  %27 = getelementptr inbounds %struct.cx23885_dev, %struct.cx23885_dev* %26, i32 0, i32 0
  %28 = bitcast %struct.cx2341x_mpeg_params* %10 to i8*
  %29 = bitcast %struct.cx2341x_mpeg_params* %27 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %28, i8* align 4 %29, i64 4, i1 false)
  %30 = load %struct.v4l2_ext_controls*, %struct.v4l2_ext_controls** %7, align 8
  %31 = load i32, i32* @VIDIOC_S_EXT_CTRLS, align 4
  %32 = call i32 @cx2341x_ext_ctrls(%struct.cx2341x_mpeg_params* %10, i32 0, %struct.v4l2_ext_controls* %30, i32 %31)
  store i32 %32, i32* %11, align 4
  %33 = load i32, i32* %11, align 4
  %34 = icmp eq i32 %33, 0
  br i1 %34, label %35, label %45

35:                                               ; preds = %25
  %36 = load %struct.cx23885_dev*, %struct.cx23885_dev** %9, align 8
  %37 = load i32, i32* @cx23885_mbox_func, align 4
  %38 = load %struct.cx23885_dev*, %struct.cx23885_dev** %9, align 8
  %39 = getelementptr inbounds %struct.cx23885_dev, %struct.cx23885_dev* %38, i32 0, i32 0
  %40 = call i32 @cx2341x_update(%struct.cx23885_dev* %36, i32 %37, %struct.cx2341x_mpeg_params* %39, %struct.cx2341x_mpeg_params* %10)
  store i32 %40, i32* %11, align 4
  %41 = load %struct.cx23885_dev*, %struct.cx23885_dev** %9, align 8
  %42 = getelementptr inbounds %struct.cx23885_dev, %struct.cx23885_dev* %41, i32 0, i32 0
  %43 = bitcast %struct.cx2341x_mpeg_params* %42 to i8*
  %44 = bitcast %struct.cx2341x_mpeg_params* %10 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %43, i8* align 4 %44, i64 4, i1 false)
  br label %45

45:                                               ; preds = %35, %25
  %46 = load i32, i32* %11, align 4
  store i32 %46, i32* %4, align 4
  br label %47

47:                                               ; preds = %45, %22
  %48 = load i32, i32* %4, align 4
  ret i32 %48
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @cx2341x_ext_ctrls(%struct.cx2341x_mpeg_params*, i32, %struct.v4l2_ext_controls*, i32) #2

declare dso_local i32 @cx2341x_update(%struct.cx23885_dev*, i32, %struct.cx2341x_mpeg_params*, %struct.cx2341x_mpeg_params*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
